<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.1</version>
		<relativePath/>
	</parent>

	<groupId>com.example</groupId>
	<artifactId>maven-spring-native</artifactId>
	<version>0.0.1-SNAPSHOT</version>

	<properties>
		<java.version>21</java.version>
		<spotless-maven-plugin.version>3.4.0</spotless-maven-plugin.version>
		<wirespec.version>0.0.0-SNAPSHOT</wirespec.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>community.flock.wirespec</groupId>
				<artifactId>wirespec-bom</artifactId>
				<version>${wirespec.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc</artifactId>
		</dependency>
		<dependency>
			<groupId>community.flock.wirespec.integration</groupId>
			<artifactId>spring-jvm</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-webmvc-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-test-autoconfigure</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<compilerArgs>--enable-preview</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>com.diffplug.spotless</groupId>
					<artifactId>spotless-maven-plugin</artifactId>
					<version>${spotless-maven-plugin.version}</version>
					<configuration>
						<skip>false</skip>
						<java>
							<includes>
								<include>src/main/java/**/*.java</include>
								<include>src/test/java/**/*.java</include>
							</includes>
							<palantirJavaFormat>
								<style>PALANTIR</style>
								<formatJavadoc>true</formatJavadoc>
							</palantirJavaFormat>
							<importOrder/>
							<removeUnusedImports/>
						</java>
					</configuration>
					<executions>
						<execution>
							<id>spotless-apply</id>
							<goals>
								<goal>apply</goal>
							</goals>
							<phase>validate</phase>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>community.flock.wirespec.plugin.maven</groupId>
				<artifactId>wirespec-maven-plugin</artifactId>
				<version>${wirespec.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<input>${project.basedir}/src/main/wirespec</input>
					<output>${project.build.directory}/generated-sources</output>
					<packageName>com.example.todo.generated</packageName>
					<languages>
						<language>Java</language>
					</languages>
					<ir>true</ir>
					<extensionClasses>
						<extensionClass>community.flock.wirespec.integration.spring.extension.SpringMappingAnnotationsExtension</extensionClass>
						<extensionClass>community.flock.wirespec.integration.spring.extension.SpringNativeHintsExtension</extensionClass>
					</extensionClasses>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>community.flock.wirespec.integration</groupId>
						<artifactId>spring-jvm</artifactId>
						<version>${wirespec.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>format</id>
			<build>
				<plugins>
					<plugin>
						<groupId>com.diffplug.spotless</groupId>
						<artifactId>spotless-maven-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
